# mcs-project-2

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  bench.csv  convert.bat  main.py  requirements.txt  run.bat  run.sh
app/: BackgroundWorker.py  ImagesHandler.py  ImagesWidget.py  LoadingCircle.py  MainWindow.py  MenuWidget.py  Settings.py
app/lib/: DCT2Handler.py  DCT2Library.py
app/ui_generated/: ui_ImagesWidget.py  ui_MainWindow.py  ui_MenuWidget.py
report/: citations.bib  import.typ  main.typ  packages.typ  unimib-template.typ
report/chapters/: 1.concetti-base.typ  1.dct2.typ  2.implementazione.typ  3.risultati.typ  4.conclusioni.typ  abstract.typ  appendice.codici.typ  introduction.typ
src/: bench-dct2.c  dct2.c  dct2.h  dct2_fftw.c  dct2_vulkan.c  fftw-dct2.c  fftw-dct2.h  tests-dct2.c
src/shaders/: dct_horiz.comp  dct_horiz.comp.spv  dct_vert.comp  dct_vert.comp.spv  shaders.h
ui/: ImagesWidget.ui  MainWindow.ui  MenuWidget.ui
